[project]
name = "comfyui-0246"
description = "Random nodes for ComfyUI I made to solve my struggle with ComfyUI (ex: pipe, process). Have varying quality."
version = "1.0.0"
license = "LICENSE"
dependencies = ["wrapt", "natsort"]

[project.urls]
Repository = "https://github.com/Trung0246/ComfyUI-0246"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "trung0246"
DisplayName = "ComfyUI-0246"
Icon = ""
